# peptideForest

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  add_mScore.py  add_mScore_py_only.py  add_mScore_without_apply.py  configuration_experiments.py  data_experiments.py  gitattributes  iterative_training_helpers.py  peptideForest.py  peptideForest_2_0_0.py  peptide_forest_1_0_0.py  peptide_forest_3.py  peptide_forest_example.py  pf4_paper_experiments.py  pyproject.toml  requirements.txt  run_peptide_forest.py  setup.cfg  setup.py  test_pf_experiment_helpers.py  tox.ini  train_2_datasets.py
.github/workflows/: pypi_cd.yml  tox_ci.yml
analysis_scripts/: accepted_x_on_engine_level.ipynb  final_evaluation.ipynb  local_importance.ipynb  ma_plot.py  ma_plots.ipynb  ma_plots2.ipynb  shifted_psms.ipynb  umap.ipynb
config/: default_hyper_parameters.json  features.json  hyper_parameters.json  hyperparameters.json  path_dict.json  ursgal_path_dict.json
docker_test_data/: config.json  config_local.json
example_data/: comet_results_unified.csv  msamanda_results_unified.csv  msfragger_results_unified.csv  msgfplus_results_unified.csv  omssa_results_unified.csv  xtandem_results_unified.csv
peptideForest/: __init__.py  classifier.py  knowledge_base.py  models.py  plot.py  prep.py  results.py  runtime.py  setup_dataset.py
peptide_forest/: __init__.py  _preprocess_features.py  add_mScore.py  analyse_results.py  file_handling.py  fit_models.py  knowledge_base.py  ma_plot.py  models.py  peptide_forest.py  pf_config.py  plot.py  plot_results.py  prep.py  quant_data_verification.py  regressor_model.py  results.py  runtime.py  sample.py  setup_dataset.py  tools.py  training.py  visualization.py
peptide_forest_old/: __init__.py  knowledge_base.py  models.py  plot.py  prep.py  results.py  setup_dataset.py
resources/: setup_dataset.py
testing/: test_all.py  test_setup_dataset.py
testing/data/: Offset_6_7ppm__04854_F1_R8_P0109699E13_TMT10_mascot_dat2csv_1_0_0_accepted_pmap_unified.csv  Offset_6_7ppm__04854_F1_R8_P0109699E13_TMT10_msfragger_20190222_pmap_unified.csv  (+3 more)
testing/ref_data/: post_analysis.pkl  (+18 more)
tests/: conftest.py  test_get_mScore.py  test_prep.py  test_regressor_model.py  test_results.py  test_training.py
(+44 files in other folders)
