[metadata]
name = peptide_forest
description = Integrate multiple search engines
long_description = Integrating multiple search engines for peptide identification
author = T. Ranff, M. Dennison, J. Bédorf, S. Schulze, N. Zinn, M. Bantscheff, J.J.R.M. van Heugten, C. Fufezan
author_email = christian@fufezan.net
url = https://github.com/peptideforest/peptideForest
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
install_requires =
    numpy>=1.21.5,<1.25.0
    pandas>=1.3.5,<2.1.0
    uparma>=0.9.14,<1.1.0
    loguru>=0.5.3,<0.8.0
    scikit-learn~=1.2.0
    tqdm>=4.62.3,<4.66.0
    pytest>=6.2.5,<7.4.0
    xgboost>=1.5.0,<1.7.0


[options.package_data]
* = *.txt

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme

[egg_info]
egg_base = .
